--- a/inputToDo_pern/client/index.html
+++ b/inputToDo_pern/client/index.html
@@ -7,6 +7,7 @@
     <title>Todo</title>
   </head>
   <body>
+    <div id="modale"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
